--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,10 @@ h1 {
   background-color: #cc1465;
 }
 
+.header .highlight {
+  background-color: #b20953;
+}
+
 h2 {
   color: #b20953;
   font-family: Sigmar One, cursive;
@@ -64,6 +68,10 @@ h2 {
 .main {
   margin: .3em;
   padding: 0 .75em;
+}
+
+.main p {
+  color: #2f2d13;
 }
 
 img {
