--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ h1 {
   margin: 0;
   color: #b20953;
   text-align: center;
-  font-family: Sigmar One, cursive;
+  font-family: "Sigmar One", cursive;
   font-size: 3rem;
 }
 
@@ -61,7 +61,7 @@ h1 {
 
 h2 {
   color: #b20953;
-  font-family: Sigmar One, cursive;
+  font-family: "Sigmar One", cursive;
   font-size: 1.875rem;
 }
 
